<resources>
    <string name="app_name">Shopping List</string>
    <string name="add_item">Add item</string>
    <string name="banana">BANANA</string>
    <string name="tea">TEA</string>
    <string name="tomato">TOMATO</string>
    <string name="orange">ORANGE</string>
    <string name="water">WATER</string>
    <string name="apple">APPLE</string>
    <string name="rice">RICE</string>
    <string name="cheese">CHEESE</string>
    <string name="milk">MILK</string>
    <string name="grape">GRAPE</string>
</resources>